Fri Sep 30 17:12:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* compile_et.c: Add declaration of error_message() manually.

	* internal.h: Use autoconf to determine whether or not to declare
		perror().

	* configure.in:
	  compiler.h:
	  internal.h:
	  compilet_et.c:
	  init_et.c: Let configure take care of removing const with AC_CONST.

Thu Sep  8 22:33:07 1994  Theodore Y. Ts'o  (tytso@pinata)

	* com_err.c (default_com_err_proc): Reversed order of \n\r to make
		jik happy.

Wed Jul 13 23:19:34 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: nuke the libcom_err.a.bak stuff

Sun Jul  3 07:48:04 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: cleaning up to not spew ignored errors

Wed Jun 22 18:47:36 1994  Mark Eichin  (eichin@tweedledumber.cygnus.com)

	* com_err.h: Only set STDARG_PROTOTYPES based on STDC if it isn't
	set already (clean up warnings.)

Wed Jun 22 17:55:48 1994  Mark Eichin  (eichin@cygnus.com)

	* Makefile.in (CP): set CP so CopySrcHeader actually works.

Tue Jun 21 00:20:44 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: add "includes" to "all" dependencies

	* configure.in: should be CopySrcHeader

Mon Jun 20 21:59:37 1994  Tom Yu  (tlyu at dragons-lair)

	* configure.in: install com_err.h during build
