@@ -5,6 +5,7 @@ AC_SET_BUILDTOP
 AC_CONST
 AC_PROG_LEX
 AC_PROG_YACC
+AC_PROG_AWK
 AC_PROG_ARCHIVE
 AC_PROG_RANLIB
 HAVE_YYLINENO
